tests/errors/generic-enum-pattern-type.ari
fn main() -> i64 {
  return match Some<i32>(1i32) {
    Some(true) => 1,
    None => 0,
  };
}
